--- a/Lendings/src/main/resources/application.properties
+++ b/Lendings/src/main/resources/application.properties
@@ -1,1 +1,77 @@
 spring.application.name=Lendings
+
+
+##
+## Profiles
+##
+spring.profiles.active=bootstrap
+
+##
+## OpenAPI
+##
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui
+
+##
+## JWT
+##
+jwt.private.key=classpath:rsa.private.key
+jwt.public.key=classpath:rsa.public.key
+
+##
+## datasource
+##
+#spring.datasource.url=jdbc:h2:tcp://localhost:9092/~/bookdb1
+#spring.datasource.url=jdbc:h2:./library_db;AUTO_SERVER=TRUE;
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+
+
+spring.h2.console.enabled=false
+spring.h2.console.path=/h2
+
+
+## show SQL
+spring.jpa.show-sql=false
+
+
+## database schema generation
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+##
+## MULTIPART (MultipartProperties)
+##
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+##
+## File Storage Properties
+##
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=./uploads-library
+
+##
+## Logging
+##
+logging.level.com.example.demo=DEBUG
+#logging.level.org.springframework=DEBUG
+
+lending.maxDaysWithoutFine=15
+lending.finePerDay=5
+
+##
+## Port
+##
+#server.port=8080
+
+spring.main.allow-bean-definition-overriding=true
