--- a/book-service/book-service-backend/src/main/resources/application-instance2.properties
+++ b/book-service/book-service-backend/src/main/resources/application-instance2.properties
@@ -1,4 +1,4 @@
-#book-service
+#book-service 2
 
 server.port=8083
 
@@ -12,7 +12,7 @@ spring.sql.init.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=off
 logging.level.org.hibernate.type=trace
 
 book.instance1.url=http://localhost:8082
