--- a/lending-service/lending-service-backend/src/main/resources/application-instance1.properties
+++ b/lending-service/lending-service-backend/src/main/resources/application-instance1.properties
@@ -12,16 +12,17 @@ spring.sql.init.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-# URLs dos servicos de books e readers
+logging.level.org.hibernate.SQL=off
+logging.level.org.hibernate.type=trace
+
+# URLs das instancias do book-service
 book.instance1.url=http://localhost:8082
 book.instance2.url=http://localhost:8083
-reader.instance1.url=http://localhost:8086
-reader.instance2.url=http://localhost:8087
 
 # URLs das instancias do lending-service
 lending.instance1.url=http://localhost:8084
 lending.instance2.url=http://localhost:8085
 
-# Logging
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type=trace
+# URLs das instancias do user-service
+reader.instance1.url=http://localhost:8086
+reader.instance2.url=http://localhost:8087
