--- a/user-service/user-service-backend/src/main/resources/application-instance2.properties
+++ b/user-service/user-service-backend/src/main/resources/application-instance2.properties
@@ -1,6 +1,7 @@
+# User-service instance 2
 server.port=8087
 
-spring.datasource.url=jdbc:h2:file:./h2/reader_instance2_db;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:./h2/user_instance2_db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -10,23 +11,16 @@ spring.sql.init.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=off
 logging.level.org.hibernate.type=trace
 
 # URLs das instancias do book-service
 book.instance1.url=http://localhost:8082
 book.instance2.url=http://localhost:8083
 
-# URLs das instancias do user-service
-reader.instance1.url=http://localhost:8086
-reader.instance2.url=http://localhost:8087
-
-# URLs das instancias do lending-service
-lending.instance1.url=http://localhost:8084
-lending.instance2.url=http://localhost:8085
-
-# Chave publica e privada
+# Chave pública e privada para a instância 1
 rsa.public.key=classpath:rsa.public.key
 rsa.private.key=classpath:rsa.private.key
 
-authservice.instance=2
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
