--- a/book-service/book-service-backend/src/main/resources/application-instance1.properties
+++ b/book-service/book-service-backend/src/main/resources/application-instance1.properties
@@ -15,9 +15,17 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=off
 logging.level.org.hibernate.type=trace
 
+# URLs das instancias do book-service
 book.instance1.url=http://localhost:8082
 book.instance2.url=http://localhost:8083
 
+# URLs das instancias do lending-service
 lending.instance1.url=http://localhost:8084
 lending.instance2.url=http://localhost:8085
 
+# Chave pública e privada para a instância 1
+rsa.public.key=classpath:rsa.public.key
+rsa.private.key=classpath:rsa.private.key
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
