--- a/lending-service/lending-service-backend/src/main/resources/application-default.properties
+++ b/lending-service/lending-service-backend/src/main/resources/application-default.properties
@@ -3,7 +3,7 @@ logging.level.web=debug
 spring.datasource.url=jdbc:h2:file:./h2/lending_db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.sql.init.platform=h2
