--- a/lending-service/lending-service-backend/src/main/resources/application-instance2.properties
+++ b/lending-service/lending-service-backend/src/main/resources/application-instance2.properties
@@ -5,7 +5,7 @@ server.port=8085
 spring.datasource.url=jdbc:h2:file:./h2/lending_instance2_db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.sql.init.platform=h2
