--- a/user-service/user-service-backend/src/main/resources/application-instance1.properties
+++ b/user-service/user-service-backend/src/main/resources/application-instance1.properties
@@ -4,7 +4,7 @@ server.port=8086
 spring.datasource.url=jdbc:h2:file:./h2/user_instance1_db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.sql.init.platform=h2
@@ -17,6 +17,11 @@ logging.level.org.hibernate.type=trace
 # URLs das instancias do book-service
 book.instance1.url=http://localhost:8082
 book.instance2.url=http://localhost:8083
+
+# URLs das instancias do user-service
+reader.instance1.url=http://localhost:8086
+reader.instance2.url=http://localhost:8087
+reader.otherinstance.url=http://localhost:8087
 
 # Chave pública e privada para a instância 1
 rsa.public.key=classpath:rsa.public.key
