--- a/user-service/user-service-backend/src/main/resources/application-instance2.properties
+++ b/user-service/user-service-backend/src/main/resources/application-instance2.properties
@@ -4,7 +4,7 @@ server.port=8087
 spring.datasource.url=jdbc:h2:file:./h2/user_instance2_db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.sql.init.platform=h2
@@ -17,6 +17,8 @@ logging.level.org.hibernate.type=trace
 # URLs das instancias do book-service
 book.instance1.url=http://localhost:8082
 book.instance2.url=http://localhost:8083
+
+reader.otherinstance.url=http://localhost:8086
 
 # Chave pública e privada para a instância 2
 rsa.public.key=classpath:rsa.public.key
