--- a/book-service/book-service-backend/src/main/resources/application-instance2.properties
+++ b/book-service/book-service-backend/src/main/resources/application-instance2.properties
@@ -23,7 +23,7 @@ book.instance2.url=http://localhost:8083
 lending.instance1.url=http://localhost:8084
 lending.instance2.url=http://localhost:8085
 
-# Chave pública e privada para a instância 2
+# Chave pÃºblica e privada para a instÃ¢ncia 2
 rsa.public.key=classpath:rsa.public.key
 rsa.private.key=classpath:rsa.private.key
 
