--- a/user-service/user-service-backend/src/main/resources/application-instance1.properties
+++ b/user-service/user-service-backend/src/main/resources/application-instance1.properties
@@ -23,7 +23,7 @@ reader.instance1.url=http://localhost:8086
 reader.instance2.url=http://localhost:8087
 reader.otherinstance.url=http://localhost:8087
 
-# Chave pública e privada para a instância 1
+# Chave pÃºblica e privada para a instÃ¢ncia 1
 rsa.public.key=classpath:rsa.public.key
 rsa.private.key=classpath:rsa.private.key
 
