--- a/user-service/user-service-backend/src/main/resources/application-instance2.properties
+++ b/user-service/user-service-backend/src/main/resources/application-instance2.properties
@@ -20,7 +20,7 @@ book.instance2.url=http://localhost:8083
 
 reader.otherinstance.url=http://localhost:8086
 
-# Chave pública e privada para a instância 2
+# Chave pÃºblica e privada para a instÃ¢ncia 2
 rsa.public.key=classpath:rsa.public.key
 rsa.private.key=classpath:rsa.private.key
 
