--- a/bookCommand/src/main/resources/application.properties
+++ b/bookCommand/src/main/resources/application.properties
@@ -14,7 +14,7 @@ rsa.public.key=classpath:rsa.public.key
 ##
 ## datasource
 ##
-spring.datasource.url=jdbc:h2:file:./src/main/resources/db/bookCommandDB;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.url=jdbc:h2:file:./bookCommand/src/main/resources/db/bookCommandDB;DB_CLOSE_ON_EXIT=FALSE;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=
@@ -49,7 +49,7 @@ spring.profiles.active=bootstrap
 ##
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=user
+spring.rabbitmq.password=password
 
 
