Book Command and Query working; Author and Book working

--- a/bookQuery/pom.xml
+++ b/bookQuery/pom.xml
@@ -161,10 +161,10 @@
         </dependency>
 
         <!-- Rabbit AMQP -->
-        <!--dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
-        </dependency-->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.amqp</groupId>
