--- a/bookQuery/src/main/resources/application.properties
+++ b/bookQuery/src/main/resources/application.properties
@@ -51,5 +51,6 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
 
 
